// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot 1`] = `
<div>
  <button
    class="button button--primary"
    type="submit"
  >
    Sign in
  </button>
</div>
`;

exports[`Button > matches snapshot while loading 1`] = `
<div>
  <button
    class="button button--quiet"
    disabled=""
    type="button"
  >
    Signing out…
  </button>
</div>
`;
